# Icebreaker

./: .dockerignore  .gitignore  BUGFIXES.md  CHANGELOG.md  COMMANDS.md  CONTRIBUTING.md  Dockerfile  FEATURES_ENABLED.md  FOUNDATION_IMPROVEMENTS.md  LICENSE  MIGRATION.md  Makefile  NESSUS_IMPORT.md  PLUGIN_MIGRATION.md  QUICK_START_PLUGINS.md  README.md  SETUP_COMPLETE.md  cli.py  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  docker-publish.yml
analyzers/: http_basic.py  ssh_banner.py
core/: logging.py  models.py  port_parser.py  risk_scoring.py  util.py
detectors/: banner_grab.py  tcp_probe.py
docs/: ARCHITECTURE.md  CSRF_PROTECTION.md  DEPLOYMENT.md  NESSUS_QUICKSTART.md  PLUGIN_SYSTEM.md  RATE_LIMITING.md
engine/: orchestrator.py  registry.py
examples/plugins/: ssh_weak_ciphers.py
icebreaker/: cli.py
icebreaker/analyzers/: api_discovery.py  dns.py  http_basic.py  info_disclosure.py  security_headers.py  ssl_cert.py  template_lookup.py  tls_analyzer.py  waf_cdn.py
icebreaker/api/: __init__.py  app.py  auth.py  csrf.py  websocket.py
icebreaker/api/routers/: analytics.py  exports.py  finding_templates.py  findings.py  import_templates.py  plugins.py  projects.py  reports.py  scans.py  schedules.py  screenshots.py  settings.py  targets.py
icebreaker/core/: ai_client.py  ai_service.py  cve_service.py  models.py  network_topology.py  network_utils.py  notifications.py  plugin_executor.py  plugin_system.py  rate_limiter.py  scheduler.py  screenshot_service.py  util.py
icebreaker/db/: add_scan_info_plugin.py  database.py  migrate_add_progress_tracking.py  migrate_add_projects.py  migrate_remove_templates.py  migrate_unique_finding_id.py  models.py  seed_analyzer_plugins.py  seed_example_plugins.py  seed_finding_templates.py
icebreaker/detectors/: banner_grab.py  nmap_probe.py  ping_sweep.py  tcp_probe.py
icebreaker/engine/: orchestrator.py
icebreaker/importers/: __init__.py  nasl_parser.py
icebreaker/plugins/: __init__.py  example_weak_ciphers.py
icebreaker/reports/: __init__.py  generator.py
icebreaker/scheduler/: __init__.py  service.py
icebreaker/web/static/css/: themes.css
icebreaker/web/static/js/: main.js
icebreaker/web/templates/: base.html  dashboard.html  finding_templates.html  import.html  network_map.html  new_scan.html  plugins.html  project_detail.html  projects.html  scan_detail.html  scans.html  schedules.html  screenshots.html  settings.html
icebreaker/web/templates/reports/: executive_summary.html  technical_report.html
icebreaker/writers/: ai_summary.py  html_writer.py  jsonl.py  markdown.py
tests/: test_analyzers.py  test_api_integration.py  test_engine_smoke.py  test_http_basic.py  test_input_validation.py  test_models.py  test_port_parser.py  test_risk_scoring.py
writers/: csv_writer.py  markdown.py  sarif.py
