[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "icebreaker"
version = "0.2.0"
description = "First-strike recon scanner with a clean plugin core."
authors = [{ name = "Thomas O'Donnell" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12",
  "rich>=13.7",
  "httpx>=0.27",
  "pydantic>=2.7",
  "fastapi>=0.109",
  "uvicorn[standard]>=0.27",
  "sqlalchemy>=2.0",
  "jinja2>=3.1",
  "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.1",
]

[project.scripts]
icebreaker = "icebreaker.cli:app"
icebreaker-web = "icebreaker.api.app:main"

[tool.ruff]
line-length = 100
select = ["E","F","I","B","W","UP"]

[tool.setuptools]
packages = ["icebreaker", "icebreaker.core", "icebreaker.engine", "icebreaker.writers", "icebreaker.analyzers", "icebreaker.detectors", "icebreaker.api", "icebreaker.api.routers", "icebreaker.db", "icebreaker.web"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
